fix: illegible link colour at HFA states (#25)
* fix: illegible link colour at HFA states

* build: replace process.argv.slice(2) with hideBin

* build: add --p as a shorthand for --production

* build: add `npm audit fix` to the chain on install

* chore: update package dependencies

--- a/src/scss/admin/wp-login.scss
+++ b/src/scss/admin/wp-login.scss
@@ -52,6 +52,10 @@ $gs-error: #f06;
       @extend %admin-link-style;
 
       color: $gs-minor;
+
+      &:hover, &:focus, &:active {
+        color: $gs-minor;
+      }
     }
   }
 
